--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Azdean/Recommender#readme",
   "dependencies": {
     "chalk": "^1.1.3",
-    "mongodb": "^2.2.16"
+    "mongodb": "^2.2.16",
+    "node-async-loop": "^1.2.2"
   }
 }
